--- a/pw06-web/pom.xml
+++ b/pw06-web/pom.xml
@@ -46,6 +46,16 @@
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>yncrea.2018</groupId>
+			<artifactId>pw06-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 
 	</dependencies>
